[tool.poetry]
name = "pgradarbackend"
version = "0.1.0"
description = ""
authors = ["yashvlinux <yashjangra690@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.138.0"
uvicorn = "^0.49.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}
argon2-cffi = "^25.1.0"
jwt = "^1.4.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
cryptography = "^49.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.51"}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pydantic-settings = "^2.14.2"
pydantic = {extras = ["email"], version = "^2.13.4"}
python-multipart = "^0.0.32"
apscheduler = "^3.11.2"
redis = "^8.0.1"
slowapi = "^0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
